force-app/main/default/objects/Product2/fields/File_Id__c.field-meta.xml
<CustomField>
    <fullName>File_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>File Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>