force-app/main/default/objects/Product2/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>